@@ -1,6 +1,9 @@
 01.feb (la)
       - fix #8974: Rest entry shortcut does not work in Voice 2
       - fix #9002: Reset Position doesn't affect tuplet bracket
+      - fix #4975: Parts should have multi-measure rests by default
+      - Update MuseScore.com plugin, better wording & worflow, 
+      easy signout, signout on exit
 30.jan (db)
       - fixed vocal range for bartione and bass (instruments.xml)
 29.jan (ws)
